# papyri-assistant

./: .dockerignore  .env.example  .gitignore  LICENSE.md  README.md  compose.prod.yaml  compose.yaml  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: usage-bug.yml  userstory.yml
.github/workflows/: backend-ci.yml
backend/: Dockerfile  pyproject.toml
backend/src/papyri_backend/: __init__.py  chat.py  cli.py  server.py  settings.py
backend/src/papyri_backend/utils/: __init__.py  messages.py
backend/tests/: test_chat.py  test_cli.py  test_server.py  test_settings.py
backend/tests/utils/: test_messages.py
docker/scrapyrus/: Dockerfile
frontend/: Dockerfile  index.html  nginx.conf  nginx.conf.template  package.json  tsconfig.json
frontend/src/: App.tsx  assistantRuntime.tsx  styles.css  vite-env.d.ts
frontend/src/components/: ChatExportButton.tsx  ChatThread.tsx
