[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "papyri-backend"
version = "0.1.0"
description = "FastAPI and LangChain chat backend for the Papyri assistant."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "langchain>=1.0.0",
  "langchain-core>=1.0.0",
  "langchain-openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "uvicorn[standard]>=0.35.0"
]

[project.optional-dependencies]
tests = [
  "pytest>=8.0"
]

[project.scripts]
papyri-backend = "papyri_backend.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
